[package]
name = "pelican_ui_proc"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
description = "Procedural macros for the Pelican Engine.."
documentation = "https://docs.rs/pelican_ui_proc"
repository = "https://github.com/ramp-stack/pelican_ui_proc"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = "2.0.100"
